--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fontsource/inter": "^5.0.8",
     "@fontsource/roboto": "^5.0.8",
+    "@mui/icons-material": "^5.14.9",
+    "@mui/joy": "^5.0.0-beta.6",
     "@mui/material": "^5.14.8",
+    "@types/textfit": "^2.4.2",
     "@uidotdev/usehooks": "^2.2.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "textfit": "^2.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
