--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@uidotdev/usehooks": "^2.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "textfit": "^2.4.0"
   },
   "devDependencies": {
