--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,11 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "types": ["@uidotdev/usehooks"],
+    "typeRoots": ["types"]
   },
   "include": ["src"],
+
   "references": [{ "path": "./tsconfig.node.json" }]
 }
