--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
     "@mui/icons-material": "^5.14.9",
     "@mui/joy": "^5.0.0-beta.6",
     "@mui/material": "^5.14.8",
-    "@types/textfit": "^2.4.2",
     "@uidotdev/usehooks": "^2.3.0",
+    "jszip": "^3.10.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.11.0",
-    "textfit": "^2.4.0"
+    "react-icons": "^4.11.0"
   },
   "devDependencies": {
+    "@types/jszip": "^3.4.1",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
