--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "typescript": "^5.0.2",
+    "user-agent-data-types": "^0.4.2",
     "vite": "^4.4.5"
   }
 }
